--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+div:nth-of-type(odd) {
+	background: yellow;
+}
+
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -22,6 +28,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  color: red;
 }
 
 .App-link {
